k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aap-server
  namespace: argocd-addons-platform
  labels:
    app.kubernetes.io/name: aap-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: argocd-addons-platform
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: aap-server
    app.kubernetes.io/component: server
